Correct an alignment of the context menu on the TrackMapPopup dialog

--- a/src/pages/mobile-devices/timeline/timeline.scss
+++ b/src/pages/mobile-devices/timeline/timeline.scss
@@ -32,7 +32,7 @@
 }
 
 .time-line-command-button .dx-button-content {
-  padding: 7px 7px 7px 7px;
+  padding: 6px 6px 6px 6px;
 }
 
 
