--- a/src/pages/mobile-devices/timeline/track-map-popup/track-map-popup.scss
+++ b/src/pages/mobile-devices/timeline/track-map-popup/track-map-popup.scss
@@ -12,6 +12,9 @@
     margin: 20px;
   }
 
-
-
+  #track-map-popup-menu {
+    border-radius: 50%;
+    box-shadow: none;
+    padding-top: 3px;
+  }
 }
